@@ -3,4 +3,4 @@ Location=changecase
 _Name=Change Case
 _Description=Changes the case of selected text.
 Author=Paolo Borelli <pborelli@katamail.com>
-Copyright=Copyright (C) 2004 Paolo Borelli
+Copyright=Copyright © 2004 Paolo Borelli
