@@ -1,6 +1,6 @@
 [Gedit Plugin]
 Location=savecopy
 _Name=Save a Copy
-_Description=Saves a copy of the current document to the desired location. The location may be remote.
-Author=
-Copyright=
+_Description=Saves a copy of the current document to a local or remote location.
+Author= Paolo Borelli <pborelli@katamail.com>
+Copyright=Copyright © 2005 Paolo Borelli
