@@ -1,3 +1,8 @@
+2005-01-11  Paolo Maggi  <paolo@gnome.org>
+
+	* changecase/changecase.gedit-plugin.desktop.in: fixed Copyright
+	string
+
 2005-01-10  Paolo Maggi  <paolo@gnome.org>
 
 	Fixed bug #145085: Tag list plugin is not localized.
